--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEdg4XK9vOHovn7eeZ/X/T"
+      "authorship_tag": "ABX9TyNzxbv9mIZ17xuxtwwOFn0i"
     },
     "kernelspec": {
       "name": "python3",
@@ -2543,6 +2543,41 @@
           "text": [
             "enter the stringfathi33\n",
             "sum of integers in string: 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python Program to merge two arrays.\n"
+      ],
+      "metadata": {
+        "id": "iwRWtH-qMvFh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=[1,2,3]\n",
+        "b=[4,5,6]\n",
+        "a.extend(b)\n",
+        "print(f\"after merging :{a}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6I96wycGHEWT",
+        "outputId": "75d03223-9b6f-4cff-8b66-6b8fd5eb2208"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "after merging :[1, 2, 3, 4, 5, 6]\n"
           ]
         }
       ]
