--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzxbv9mIZ17xuxtwwOFn0i"
+      "authorship_tag": "ABX9TyMNEoU821XvvmgD470VTBM3"
     },
     "kernelspec": {
       "name": "python3",
@@ -2535,7 +2535,7 @@
         },
         "outputId": "35060ad3-72e2-479e-e1db-8d9e86d01e53"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2571,13 +2571,65 @@
         "id": "6I96wycGHEWT",
         "outputId": "75d03223-9b6f-4cff-8b66-6b8fd5eb2208"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "after merging :[1, 2, 3, 4, 5, 6]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "```\n",
+        "Python Program to find highest frequency element in array.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "s5ysBNbTIJWK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=[1,2,3,4,4,6]\n",
+        "l=[]\n",
+        "for i in a:\n",
+        "  for j in l:\n",
+        "    if j[0]==i:\n",
+        "      j[1]+=1\n",
+        "      break\n",
+        "  else:\n",
+        "    l.append([i,1])\n",
+        "l1=[]\n",
+        "for k in l:\n",
+        "  l1.append(k[1])\n",
+        "max=max(l1)\n",
+        "for m in l:\n",
+        "  if m[1]==max:\n",
+        "    print(f\"highest frequency element in array: {m[0]}\")\n",
+        "  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MjsQVKLuIO2U",
+        "outputId": "9c431aa3-fe51-405c-e425-fd8e5474a4ea"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "highest frequency element in array: 4\n"
           ]
         }
       ]
