--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNEoU821XvvmgD470VTBM3"
+      "authorship_tag": "ABX9TyMMTLnUZ1RgMNBa6naomvh/"
     },
     "kernelspec": {
       "name": "python3",
@@ -2633,6 +2633,66 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python Program to add two number using recursion.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "p_SI90uXKRR9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(n1,sum,i):\n",
+        "  sum+=n1\n",
+        "  i+=1\n",
+        "  if(i<=1):\n",
+        "    n2=int(input(\"enter the second number\"))\n",
+        "    return add(n2,sum,i)\n",
+        "  else:\n",
+        "    return sum\n",
+        "n1=int(input(\"enter the first number\"))\n",
+        "sum=0\n",
+        "i=0\n",
+        "a=add(n1,sum,i)\n",
+        "print(f\"sum is {a}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KWTkrH6LKTbM",
+        "outputId": "364b0232-7745-4bc5-df63-5eae44a898f7"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the first number12\n",
+            "enter the second number22\n",
+            "sum is 34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lVBlild7P5fm"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
