--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMTLnUZ1RgMNBa6naomvh/"
+      "authorship_tag": "ABX9TyMiBIN0APvqrmPcmbozDAmi",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -2686,13 +2697,108 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to print all non repeating number in array\n",
+        "```\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "lVBlild7P5fm"
+        "id": "iMXO6G90jfPb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=[1,2,3,4,4,6]\n",
+        "l=[]\n",
+        "for i in a:\n",
+        "  for j in l:\n",
+        "    if j[0]==i:\n",
+        "      j[1]+=1\n",
+        "      break\n",
+        "  else:\n",
+        "    l.append([i,1])\n",
+        "for k in l:\n",
+        "    if k[1]>1:\n",
+        "      l.remove(k)\n",
+        "print(\"non repeating character in string: \")\n",
+        "for m  in l:\n",
+        "    print(m[0],end=\" \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lVBlild7P5fm",
+        "outputId": "afdd0d33-908e-499d-e5de-b542c0782cdb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "non repeating character in string: \n",
+            "1 2 3 6 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to print all non repeating character in string\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JVanGYWfmj4n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=\"fathima\"\n",
+        "l=[]\n",
+        "for i in a:\n",
+        "  for j in l:\n",
+        "    if j[0]==i:\n",
+        "      j[1]+=1\n",
+        "      break\n",
+        "  else:\n",
+        "    l.append([i,1])\n",
+        "for k in l:\n",
+        "    if k[1]>1:\n",
+        "      l.remove(k)\n",
+        "print(\"non repeating character in string: \")\n",
+        "for m  in l:\n",
+        "    print(m[0],end=\" \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2QbMeq0Xmpwy",
+        "outputId": "c8288202-7750-421b-f507-c21ee13d2cea"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "non repeating character in string: \n",
+            "f t h i m "
+          ]
+        }
+      ]
     }
   ]
 }
