--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiBIN0APvqrmPcmbozDAmi",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyONqW5NLj4Sj+Mlg/X+TOXw"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -2796,6 +2785,46 @@
           "text": [
             "non repeating character in string: \n",
             "f t h i m "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to copy one string to another string.\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "e_8Lr6VEnB0y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=input(\"enter the string\")\n",
+        "b=a[:]\n",
+        "print(\"string copied\",b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ccjRUPsYm27P",
+        "outputId": "b7ba43c5-62d9-45b0-8aa5-458ee09625aa"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the stringfathi\n",
+            "string copied fathi\n"
           ]
         }
       ]
