--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONqW5NLj4Sj+Mlg/X+TOXw"
+      "authorship_tag": "ABX9TyMBYiD4nOXwLIEj/9I3+Qhc"
     },
     "kernelspec": {
       "name": "python3",
@@ -2623,7 +2623,7 @@
         "id": "MjsQVKLuIO2U",
         "outputId": "9c431aa3-fe51-405c-e425-fd8e5474a4ea"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2672,7 +2672,7 @@
         "id": "KWTkrH6LKTbM",
         "outputId": "364b0232-7745-4bc5-df63-5eae44a898f7"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2725,7 +2725,7 @@
         "id": "lVBlild7P5fm",
         "outputId": "afdd0d33-908e-499d-e5de-b542c0782cdb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2777,7 +2777,7 @@
         "id": "2QbMeq0Xmpwy",
         "outputId": "c8288202-7750-421b-f507-c21ee13d2cea"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2817,7 +2817,7 @@
         "id": "ccjRUPsYm27P",
         "outputId": "b7ba43c5-62d9-45b0-8aa5-458ee09625aa"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2825,6 +2825,79 @@
           "text": [
             "enter the stringfathi\n",
             "string copied fathi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python Program to sort characters of string in ascending order.\n",
+        ":"
+      ],
+      "metadata": {
+        "id": "OM7e9en2Mlqb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=\"fathima\"\n",
+        "l=[i for i in string]\n",
+        "l=sorted(l)\n",
+        "s=\"\".join(l)\n",
+        "print(f\"after sorting {s}\")"
+      ],
+      "metadata": {
+        "id": "OOSf31zPoCqK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9731f994-f83f-482f-97be-0cc28b8dd45f"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "after sorting aafhimt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python Program to sort characters of string in descending order.\n"
+      ],
+      "metadata": {
+        "id": "OH72Js3ENbwd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=\"fathima\"\n",
+        "l=[i for i in string]\n",
+        "l=sorted(l,reverse=True)\n",
+        "s=\"\".join(l)\n",
+        "print(f\"after sorting {s}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bGJEGbY4M7jc",
+        "outputId": "3b86c7e4-b8b3-48ba-d467-f6c3a2952b8f"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "after sorting tmihfaa\n"
           ]
         }
       ]
