--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBYiD4nOXwLIEj/9I3+Qhc"
+      "authorship_tag": "ABX9TyPdCMaMhfScO+Ih3lwkVdc1"
     },
     "kernelspec": {
       "name": "python3",
@@ -2855,7 +2855,7 @@
         },
         "outputId": "9731f994-f83f-482f-97be-0cc28b8dd45f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2891,13 +2891,86 @@
         "id": "bGJEGbY4M7jc",
         "outputId": "3b86c7e4-b8b3-48ba-d467-f6c3a2952b8f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "after sorting tmihfaa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "Python program to calculate the power using the POW method.\n",
+        "\\```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9lcE433SOZCM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"power of given number is {pow(2,3)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MsC1m6AaOYen",
+        "outputId": "224788e3-feca-4a3f-bf4c-7e8e5c7bc226"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "power of given number is 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python program to calculate the power by not using the POW method.\n"
+      ],
+      "metadata": {
+        "id": "31xFSAi5PrJO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=float(input(\"enter the base\"))\n",
+        "p=int(input(\"enter the power\"))\n",
+        "print(f\"power of a given number is {n**p}\")"
+      ],
+      "metadata": {
+        "id": "dmMy1mOtPGIn",
+        "outputId": "cb3bf399-ee9e-4493-f5b1-5190c1742666",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the base2\n",
+            "enter the power3\n",
+            "power of a given number is 8.0\n"
           ]
         }
       ]
