--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdCMaMhfScO+Ih3lwkVdc1"
+      "authorship_tag": "ABX9TyO0E8zdxqfcftyKu8NPEEuk"
     },
     "kernelspec": {
       "name": "python3",
@@ -2957,12 +2957,92 @@
       ],
       "metadata": {
         "id": "dmMy1mOtPGIn",
-        "outputId": "cb3bf399-ee9e-4493-f5b1-5190c1742666",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cb3bf399-ee9e-4493-f5b1-5190c1742666"
       },
       "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the base2\n",
+            "enter the power3\n",
+            "power of a given number is 8.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python Program to calculate the power without using POW function.(using for loop)."
+      ],
+      "metadata": {
+        "id": "vgurcfuHVBuI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base=float(input(\"enter the base\"))\n",
+        "result=1\n",
+        "power=int(input(\"enter the power\"))\n",
+        "for i in range(0,power):\n",
+        "  result*=base\n",
+        "print(f\"power of a given number is {result}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8mzCBRacVH1g",
+        "outputId": "fd93428c-ab0d-4373-a7e3-91f04ac9a7c8"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the base2\n",
+            "enter the power3\n",
+            "power of a given number is 8.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python Program to calculate the power without using POW function.(using while loop)."
+      ],
+      "metadata": {
+        "id": "LflyTlOsg5d2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base=float(input(\"enter the base\"))\n",
+        "result=1\n",
+        "n=0\n",
+        "power=int(input(\"enter the power\"))\n",
+        "while(n<power):\n",
+        "  result*=base\n",
+        "  n+=1\n",
+        "print(f\"power of a given number is {result}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A4c1rMJhg5LH",
+        "outputId": "abcd1705-32ab-4150-d1d7-441c72ab898b"
+      },
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
