--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0E8zdxqfcftyKu8NPEEuk"
+      "authorship_tag": "ABX9TyPTtwhuJp/eINQF7eIgf8Y6",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -2962,7 +2973,7 @@
         },
         "outputId": "cb3bf399-ee9e-4493-f5b1-5190c1742666"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3001,7 +3012,7 @@
         "id": "8mzCBRacVH1g",
         "outputId": "fd93428c-ab0d-4373-a7e3-91f04ac9a7c8"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3042,7 +3053,7 @@
         "id": "A4c1rMJhg5LH",
         "outputId": "abcd1705-32ab-4150-d1d7-441c72ab898b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3051,6 +3062,41 @@
             "enter the base2\n",
             "enter the power3\n",
             "power of a given number is 8.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "python program to find the square root of the number"
+      ],
+      "metadata": {
+        "id": "G6YWRWxeUxKz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "n=float(input(\"enter the number\"))\n",
+        "print(f\"square root of a number is {math.sqrt(n)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "389PvzzLU8wQ",
+        "outputId": "ab43218a-c09f-4b32-d57a-e8c6e95f77ef"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the number25\n",
+            "square root of a number is 5.0\n"
           ]
         }
       ]
