--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTtwhuJp/eINQF7eIgf8Y6",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPAQNj9SoNKA86xKwdIvkpC"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/fathimar33/python_programs/blob/main/python1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -3097,6 +3086,132 @@
           "text": [
             "enter the number25\n",
             "square root of a number is 5.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python Program to find GCD or HCF of two numbers.\n"
+      ],
+      "metadata": {
+        "id": "exF0RfvSVxc-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def gcf(n,n1):\n",
+        "  l=[]\n",
+        "  for i in range(1,n+1):\n",
+        "    if(n%i==0):\n",
+        "      l.append(i)\n",
+        "  print(l)\n",
+        "  l1=[]\n",
+        "  for i in range(1,n1+1):\n",
+        "    if(n1%i==0):\n",
+        "      l1.append(i)\n",
+        "  print(l1)\n",
+        "  l2=[]\n",
+        "  for k in l:\n",
+        "    if k in l1:\n",
+        "      l2.append(k)\n",
+        "  print(l2)\n",
+        "  return max(l2)\n",
+        "n=int(input(\"enter number 1\"))\n",
+        "n1=int(input(\"enter number 2\"))\n",
+        "result=gcf(n,n1)\n",
+        "print(f\"gcf of numbers{result}\")\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HWv1ez9NVyvj",
+        "outputId": "9c8edf15-1149-4866-b9e1-a1a682aabd49"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter number 112\n",
+            "enter number 224\n",
+            "[1, 2, 3, 4, 6, 12]\n",
+            "[1, 2, 3, 4, 6, 8, 12, 24]\n",
+            "[1, 2, 3, 4, 6, 12]\n",
+            "gcf of numbers12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternative\n",
+        "def gcd(n, n1):\n",
+        "    factors_n = []\n",
+        "    for i in range(1, min(n, n1) + 1):\n",
+        "        if n % i == 0 and n1 % i == 0:\n",
+        "            factors_n.append(i)\n",
+        "    return max(factors_n)\n",
+        "\n",
+        "n = int(input(\"Enter number 1: \"))\n",
+        "n1 = int(input(\"Enter number 2: \"))\n",
+        "result = gcd(n, n1)\n",
+        "print(f\"GCD of {n} and {n1} is {result}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LPOcIOKDaQtO",
+        "outputId": "84356f9e-10bb-4cc9-8855-5987a83812b2"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number 1: 12\n",
+            "Enter number 2: 24\n",
+            "GCD of 12 and 24 is 12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternative:\n",
+        "import math\n",
+        "n=int(input(\"enter number 1\"))\n",
+        "n1=int(input(\"enter number 2\"))\n",
+        "print(f\"GCD of {n} and {n1} is {math.gcd(n,n1)}\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oYneqEYMau5s",
+        "outputId": "aceef6a4-714a-43f2-cb00-5263a4852ec0"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter number 112\n",
+            "enter number 224\n",
+            "GCD of 12 and 24 is 12\n"
           ]
         }
       ]
