--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAQNj9SoNKA86xKwdIvkpC"
+      "authorship_tag": "ABX9TyPVIOqa6xJYB84io0/170Xy"
     },
     "kernelspec": {
       "name": "python3",
@@ -3212,6 +3212,76 @@
             "enter number 112\n",
             "enter number 224\n",
             "GCD of 12 and 24 is 12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python program to calculate LCM of given two numbers.\n"
+      ],
+      "metadata": {
+        "id": "uXye_R9rkcZM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "n=int(input(\"enter number 1\"))\n",
+        "n1=int(input(\"enter number 2\"))\n",
+        "gcd=math.gcd(n,n1)\n",
+        "lcm=(n*n1)/gcd\n",
+        "print(f\"LCM of {n} and {n1} is {int(lcm)}\")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "31R6BMZ-kZ5Q",
+        "outputId": "83d96944-0880-40e8-825c-6aa1a6a5f412"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter number 112\n",
+            "enter number 223\n",
+            "LCM of 12 and 23 is 276\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternative:\n",
+        "import math\n",
+        "n=int(input(\"enter number 1\"))\n",
+        "n1=int(input(\"enter number 2\"))\n",
+        "print(f\"LCM of {n} and {n1} is {math.lcm(n,n1)}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MQiNSZH2mLI4",
+        "outputId": "b574422b-21ec-435c-b2ce-a03f8af174ac"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter number 112\n",
+            "enter number 223\n",
+            "LCM of 12 and 23 is 276\n"
           ]
         }
       ]
