--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVIOqa6xJYB84io0/170Xy"
+      "authorship_tag": "ABX9TyPtrY8wEHohtrdIouKmhJk1"
     },
     "kernelspec": {
       "name": "python3",
@@ -3078,7 +3078,7 @@
         "id": "389PvzzLU8wQ",
         "outputId": "ab43218a-c09f-4b32-d57a-e8c6e95f77ef"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3134,7 +3134,7 @@
         "id": "HWv1ez9NVyvj",
         "outputId": "9c8edf15-1149-4866-b9e1-a1a682aabd49"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3173,7 +3173,7 @@
         "id": "LPOcIOKDaQtO",
         "outputId": "84356f9e-10bb-4cc9-8855-5987a83812b2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3203,7 +3203,7 @@
         "id": "oYneqEYMau5s",
         "outputId": "aceef6a4-714a-43f2-cb00-5263a4852ec0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3244,7 +3244,7 @@
         "id": "31R6BMZ-kZ5Q",
         "outputId": "83d96944-0880-40e8-825c-6aa1a6a5f412"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3273,7 +3273,7 @@
         "id": "MQiNSZH2mLI4",
         "outputId": "b574422b-21ec-435c-b2ce-a03f8af174ac"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3282,6 +3282,105 @@
             "enter number 112\n",
             "enter number 223\n",
             "LCM of 12 and 23 is 276\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "write the python code to calculate probability of positive negative zero numbers in array\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "KZSzdXVFU3J3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter the size of the array\"))\n",
+        "l=[]\n",
+        "for i in range(n):\n",
+        "  num=int(input(\"enter the number to add in the array\"))\n",
+        "  l.append(num)\n",
+        "n=len(l)\n",
+        "count_n=0\n",
+        "count_p=0\n",
+        "count_z=0\n",
+        "for k in l:\n",
+        "  if k<0:\n",
+        "    count_n+=1\n",
+        "  elif k==0:\n",
+        "    count_z+=1\n",
+        "  else:\n",
+        "    count_p+=1\n",
+        "print(f\"probability of negative numbers in array{count_n/n:.6f}\")\n",
+        "print(f\"probability of positive numbers in array{count_p/n:.6f}\")\n",
+        "print(f\"probability of  zero in array{count_z/n:.6f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UR_7fZ2UQFIx",
+        "outputId": "f2436ed5-8ae8-4ec1-edde-35003802ea13"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the size of the array5\n",
+            "enter the number to add in the array-1\n",
+            "enter the number to add in the array-1\n",
+            "enter the number to add in the array0\n",
+            "enter the number to add in the array1\n",
+            "enter the number to add in the array1\n",
+            "probability of negative numbers in array0.400000\n",
+            "probability of positive numbers in array0.400000\n",
+            "probability of  zero in array0.200000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternative\n",
+        "n=int(input(\"enter the size of the array\"))\n",
+        "l=[int(input(\"enter number\")) for i in range(n)]\n",
+        "count_n=len([i for i in l if i<0])\n",
+        "count_p=len([i for i in l if i>0])\n",
+        "count_z=len([i for i in l if i==0])\n",
+        "print(f\"probability of negative numbers in array{count_n/n:.6f}\")\n",
+        "print(f\"probability of positive numbers in array{count_p/n:.6f}\")\n",
+        "print(f\"probability of  zero in array{count_z/n:.6f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NzLoJWqzUUGK",
+        "outputId": "2030cb95-bf83-4d1b-ff11-81a24b855cd9"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the size of the array5\n",
+            "enter number-1\n",
+            "enter number-1\n",
+            "enter number0\n",
+            "enter number1\n",
+            "enter number1\n",
+            "probability of negative numbers in array0.400000\n",
+            "probability of positive numbers in array0.400000\n",
+            "probability of  zero in array0.200000\n"
           ]
         }
       ]
