--- a/python1.ipynb
+++ b/python1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtrY8wEHohtrdIouKmhJk1"
+      "authorship_tag": "ABX9TyN1hJ+RKwVKX9GFouzH7nOh"
     },
     "kernelspec": {
       "name": "python3",
@@ -3327,7 +3327,7 @@
         "id": "UR_7fZ2UQFIx",
         "outputId": "f2436ed5-8ae8-4ec1-edde-35003802ea13"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3364,23 +3364,193 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NzLoJWqzUUGK",
-        "outputId": "2030cb95-bf83-4d1b-ff11-81a24b855cd9"
+        "outputId": "b3c00063-b04c-413a-f6b4-f071e6acb1f6"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "enter the size of the array5\n",
-            "enter number-1\n",
+            "enter number0\n",
+            "enter number1\n",
             "enter number-1\n",
             "enter number0\n",
             "enter number1\n",
-            "enter number1\n",
-            "probability of negative numbers in array0.400000\n",
+            "probability of negative numbers in array0.200000\n",
             "probability of positive numbers in array0.400000\n",
-            "probability of  zero in array0.200000\n"
+            "probability of  zero in array0.400000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "n=int(input(\"enter the size of the array\"))\n",
+        "l=[random.randint(-100,100) for i in range(n)]\n",
+        "count_n=len([i for i in l if i<0])\n",
+        "count_p=len([i for i in l if i>0])\n",
+        "count_z=len([i for i in l if i==0])\n",
+        "print(f\"probability of negative numbers in array{count_n/n:.6f}\")\n",
+        "print(f\"probability of positive numbers in array{count_p/n:.6f}\")\n",
+        "print(f\"probability of  zero in array{count_z/n:.6f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2oUyjO2Xl4Ge",
+        "outputId": "accf004e-0577-41c3-80d6-9c79ac7af4f5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the size of the array1000\n",
+            "probability of negative numbers in array0.538000\n",
+            "probability of positive numbers in array0.456000\n",
+            "probability of  zero in array0.006000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python Program to Convert Decimal Number into Binary.\n"
+      ],
+      "metadata": {
+        "id": "GNi5IRAPqcAF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter decimal number\"))\n",
+        "s=\"\"\n",
+        "while(n>0):\n",
+        "  r=n%2\n",
+        "  n=n//2\n",
+        "  s+=str(r)\n",
+        "binary = int(s[::-1])\n",
+        "print(binary)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uv6rhi_2w_6g",
+        "outputId": "2c2eefef-33f9-4e3f-9dae-110b99fb2db6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter decimal number12\n",
+            "1100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternative\n",
+        "n=int(input(\"enter decimal number\"))\n",
+        "s=\"\"\n",
+        "r=bin(n)\n",
+        "print(r[2:])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UPo49cC5zNiN",
+        "outputId": "31d49192-0ea3-420c-e5aa-889dd1c742ea"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter decimal number12\n",
+            "1100\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Python Program to convert Decimal number to Octal number.\n"
+      ],
+      "metadata": {
+        "id": "F27a9EEe0KHI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"enter decimal number\"))\n",
+        "s=\"\"\n",
+        "while(n>0):\n",
+        "  r=n%8\n",
+        "  n=n//8\n",
+        "  s+=str(r)\n",
+        "binary = int(s[::-1])\n",
+        "print(binary)\n"
+      ],
+      "metadata": {
+        "id": "_k9_SWBA0hXR",
+        "outputId": "13efdf3d-cccc-4489-805c-7e6fe2551fb2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter decimal number972\n",
+            "1714\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternative\n",
+        "n=int(input(\"enter decimal number\"))\n",
+        "s=\"\"\n",
+        "r=oct(n)\n",
+        "print(r[2:])"
+      ],
+      "metadata": {
+        "id": "rznweq1y0Jvb",
+        "outputId": "65a6694e-a1ce-4f98-bdd1-1c2d0f8fb94c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter decimal number972\n",
+            "1714\n"
           ]
         }
       ]
